# VMDragonSlayer

./: .gitignore  .pre-commit-config.yaml  BUILD_PLUGINS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE-HEADER.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt  verify_installation.py
.github/workflows/: ci.yml  license-check.yml  sync-wiki.yml  tests.yml  validation-agent.yml
data/: .env.template  README.md  database_config.json  taint_config.properties
data/models/: README.md  model_registry_config.toml
data/models/metadata/: bytecode_classifier_v1.json  ensemble_classifier_v1.json  handler_classifier_v1.json  vm_detector_v1.json  vmprotect_detector_v1.json
data/models/pretrained/: README.md  ensemble_classifier_v1.pkl  handler_classifier_v1.pkl  vm_detector_v1.pkl  vmprotect_detector_v1.pkl
data/patterns/: pattern_database.json  pattern_database_dev.json
data/samples/: sample_registry.json
data/schemas/: analysis_result_schema.json  pattern_database_schema.json  pattern_database_validation_schema.json
data/scripts/: README.md  model_versioning.py  train_models.py  validate_patterns.py
data/training/: training_config.json
documentation/: 00-overview.md  01-architecture.md  02-getting-started.md  03-modules.md  04-apis.md  05-workflows.md  06-data-and-models.md  07-plugins.md  08-cli-and-tools.md  09-testing-and-quality.md  10-operations.md  99-glossary.md  Home.md
documentation/assets/: openapi.json
documentation/guides/: model_training.md
documentation/modules/dragonslayer/analysis/pattern_analysis/: recognizer.md
documentation/modules/dragonslayer/analysis/symbolic_execution/: executor.md
documentation/modules/dragonslayer/analysis/taint_tracking/: tracker.md
documentation/modules/dragonslayer/analysis/vm_discovery/: detector.md
documentation/modules/dragonslayer/api/: client.md  server.md
documentation/modules/dragonslayer/core/: api.md  config.md  exceptions.md  orchestrator.md
dragonslayer/: __init__.py  quick_start.py  setup.py  unified_analysis.py
dragonslayer/analysis/: __init__.py
dragonslayer/analysis/anti_evasion/: __init__.py  environment_normalizer.py  security_extensions.py
dragonslayer/analysis/multi_arch/: cross_platform_detector.py
dragonslayer/analysis/pattern_analysis/: __init__.py  classifier.py  database.py  extended_recognizer.py  recognizer.py
dragonslayer/analysis/symbolic_execution/: __init__.py  executor.py  lifter.py  solver.py  symbolic_engine.py
dragonslayer/analysis/taint_tracking/: BUILD.md  Makefile  VMDragonTaint  VMDragonTaint.cpp  __init__.py  analyzer.py  build_windows.bat  dtt_executor.py  tracker.py  vm_taint_tracker.py
dragonslayer/analysis/vm_discovery/: __init__.py  analyzer.py  database.py  detector.py
dragonslayer/analytics/: __init__.py  dashboard.py  intelligence.py  metrics.py  reporting.py
dragonslayer/api/: __init__.py  client.py  endpoints.py  server.py  transfer.py
dragonslayer/core/: __init__.py  api.py  config.py  exceptions.py  orchestrator.py
dragonslayer/enterprise/: __init__.py  api_integration.py  compliance_framework.py  enterprise_architecture.py
dragonslayer/gpu/: __init__.py  engine.py  memory.py  optimizer.py  profiler.py
dragonslayer/ml/: __init__.py  classifier.py  ensemble.py  ml_detection.py  model.py  pipeline.py  trainer.py
dragonslayer/realtime/: analysis_engine.py
dragonslayer/ui/: __init__.py  charts.py  dashboard.py  interface.py  widgets.py
dragonslayer/utils/: __init__.py  memory.py  performance.py  platform.py  validation.py
dragonslayer/workflows/: __init__.py  integration.py  manager.py  pipeline.py
evidence/: validation_test.json
examples/: 01_basic_usage.py  02_vmprotect_detection.py  03_configuration.py  04_batch_analysis.py  05_extended_features.py
plugins/binaryninja/: README.md  __init__.py  vmdragonslayer_bn.py
plugins/binaryninja/ui/: __init__.py  config_editor.py  dashboard.py  pattern_browser.py  results_viewer.py  status_monitor.py  vm_structure_explorer.py
plugins/ghidra/: .antProperties.xml  .classpath  .project  README.md  application.properties  build.bat  build.gradle  build.properties  extension.properties  gradle.properties  plugin.properties
plugins/ghidra/src/main/java/vmdragonslayer/: VMDragonSlayerAnalyzer.java  VMDragonSlayerExporter.java  VMDragonSlayerFileSystem.java  VMDragonSlayerLoader.java  VMDragonSlayerPlugin.java
plugins/ghidra/src/main/java/vmdragonslayer/api/: AIDecision.java  APIDataModels.java  AgentDecisionHistory.java  AgenticAPIClient.java  AnalysisRequest.java  AnalysisResult.java  AnalysisStatus.java  AnalysisUpdate.java  EngineStatus.java  PerformanceMetrics.java  ProgramContext.java  SystemStatistics.java  SystemStats.java  VMDSAPIClient.java
plugins/ghidra/src/main/java/vmdragonslayer/integration/: GhidraIntegration.java
plugins/ghidra/src/main/java/vmdragonslayer/ui/: AIDecisionDashboard.java  AnalysisControlPanel.java  EngineStatusPanel.java  FeaturesPanel.java  ResultsViewer.java  VMDragonSlayerProvider.java
plugins/ghidra/src/main/resources/: application.properties  plugin.xml
plugins/ghidra/src/test/java/vmdragonslayer/api/: VMDSAPIClientTest.java
plugins/idapro/: README.md  vmdragonslayer_ida.py
tests/: conftest.py
tests/integration/: test_binaryninja_integration.py  test_ghidra_integration.py  test_ida_integration.py
tests/mocks/: mock_api_server.py
tests/unit/: test_validate_vm_detection_script.py
tests/unit/analysis/: test_pattern_recognizer_thresholds.py  test_vm_detector_noise.py
tests/unit/api/: test_server_endpoints.py  test_transfer_utils.py
tests/unit/core/: test_config.py  test_orchestrator_async_shapes.py
tests/unit/tools/: test_schema_validate.py
tools/: __init__.py  add_license_headers.py  bandit_gate.py  coverage_gate.py  determinism_runner.py  evidence_pack.py  pattern_diff_testing.py  pip_audit_gate.py  schema_validate.py  validate_vm_detection.py
